k8s/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: petclinic-dev
  labels:
    developer-namespace: "yes"
