k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
  namespace: petclinic-dev
  labels:
    app: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
      - name: petclinic
        image: registry.tanzu-devs.com/failk8s/petclinic
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: registry-creds
      serviceAccountName: petclinic
---
apiVersion: v1
kind: Service
metadata:
  name: petclinic
  namespace: petclinic-dev
spec:
  selector:
    app: petclinic
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: petclinic
  namespace: petclinic-dev
spec:
  rules:
  - host: petclinic.apps.tanzu-devs.com
    http:
      paths:
      - backend:
          serviceName: petclinic
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - petclinic.apps.tanzu-devs.com
    secretName: wildcard
